--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-/*
- * A Design by GraphBerry
- * Author: GraphBerry
- * Author URL: http://graphberry.com
- * License: http://graphberry.com/pages/license
- */
+/* 
+ A Design by juniorguira2012
+ Author: juniorguira2012
+ Author URL: http://juniorguira2012.000webhostapp.com/
+  */
+
+
 
 /* Table of content
 1.General - This is created general styles and overide some bootstrap classes.
@@ -28,7 +29,7 @@
 1. General
 **********************************************************************/
  body {
-    font-family:'Roboto', sans-serif;
+    font-family:'Baskerville', sans-serif;
     color: #FFF;
     line-height:1.2em;
     font-size:17px;
@@ -65,15 +66,16 @@ p {
     display: none;
     position: relative;
     right: 0;
-    background-color: #c5c1cc;
-    min-width: 6px; 
+    background-color: #00aeff;
+    min-width: 10px; 
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 3;
+    border-radius: 10px;
   }
   
   .dropdown-content a {
     color: black;
-    padding: 1px 1px;
+    padding: 5px 2px;
     text-decoration: none;
     display: block; 
     text-align: center;
@@ -91,7 +93,7 @@ p {
 
 /*****************************************************/
 .navbar {
-    background: #3154be;
+    background: #00aeff;
     margin-bottom:0;
     min-height: 20px;
 }
@@ -120,7 +122,7 @@ p {
     margin:20px 5px;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
-    border: 1px solid #4479d4f9;
+    border: 1px solid #5c96dc;;
     border-radius: 15px;
     box-shadow: none;
     font-size:15px;
@@ -132,7 +134,7 @@ p {
 .navbar .nav > li:hover> a, .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
     border: 1px solid #c9c6b8;
     color: #fff;
-    background-color: #1862ab;
+    background-color: #00aeff;
     transition: border-color 1s ease;
 }
 .nav-pills {
@@ -154,8 +156,8 @@ p {
 }
 .navbar .btn-navbar:hover, .navbar .btn-navbar {
     border-radius:0;
-    background:#1aa3fe;
-    color: rgb(59, 124, 230);
+    background:#00aeff;
+    color: #5c96dc;
 }
 /******
 2. Layout
@@ -182,6 +184,7 @@ p {
 .large-text {
     line-height:1.2em;
     font-size: 30px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: #181A1C;
     padding:20px;
     margin-bottom:20px;
@@ -244,35 +247,38 @@ p {
 /*
 2.2 Buttons - There are buttons on a transparent background, primary and secondary color background.
 **********/
+.button img{
+    width: 100px;
+}
  .button,  .button:visited, .button:focus {
     display:inline-block;
-    border:1px solid #181A1C;
-    color:#181A1C;
+    color:#212326;
     background-color:transparent;
     padding:15px 30px;
     font-size:17px;
     line-height:auto;
+    
 }
 .button:hover, .button:active{
-    background-color:#181A1C;
+    background-color:#8aa0b4;
     color:#fff;
 }
 .button-sp, .button-sp:visited, .button-sp:focus {
     border:none;
-    background-color:#FECE1A;
+    background-color:#00aeff;
     color:#181A1C;
 }
 .button-sp:hover, .button-sp:active {
     background-color:#181A1C;
-    color:#FECE1A;
+    color:#6f869e;
 }
 .button-ps, .button-ps:visited, .button-ps:focus {
     border:none;
     background-color:#181A1C;
-    color:#FECE1A;
+    color:#3a9a2d;
 }
 .button-ps:hover, .button-ps:active {
-    background-color:#FECE1A;
+    background-color:#708fb1;
     color:#181A1C;
 }
 /*
@@ -364,16 +370,16 @@ p {
     font-size: 32px;
     padding:0 5px;
 }
-.social li a {
+.social li a img{
     margin:0;
     padding:0;
-    width:32px;
-    height:32px;
-    color: #1ab2fe;
+    width: 40px;
+    height:40px;
+    /* color: #1ab2fe; */
 }
-.social li a:hover {
+/* .social li a img:hover {
     color:#2a3137;
-}
+} */
 /*
 3. Sections 
 ***************************************************************************/
@@ -395,7 +401,7 @@ p {
 }
 .section .title > p {
     font-size: 20px;
-    color: rgb(155, 123, 123);
+    color: #00aeff;
     font-weight: lighter;
 }
 .primary-section {
@@ -407,57 +413,57 @@ p {
 .primary-section .title {
     border-bottom: 1px solid rgb(0, 0, 0);
 }
-.primary-section, .primary-section .title p, .primary-section h3 {
+.primary-section, .primary-section .title p, .primary-section h2 {
     color: #141412;
 }
-.primary-section h1 {
+.primary-section h2 {
     color:rgb(18, 17, 17);
 }
 .secondary-section {
-    background:#1685e1;
+    background:rgb(87, 151, 200);
 }
-.secondary-section .title {
-    border-bottom: 1px solid #181A1C;
+.secondary-section{
+    border-bottom: 1px solid #121313;
 }
-.secondary-section h1, .secondary-section .title p {
-    color: #181A1C;
+.secondary-section h2, .secondary-section .title p{
+    color: #121213;
 }
 /* Third section use bacground image */
 .third-section {
-    padding-bottom: 70px;
+    padding-bottom: 40px;
     background: #181A1C url(../images/brand-bg.png) no-repeat center;
     border-top:6px solid #1a9ffe;
 }
 .third-section .container {
-    padding-top:20px;
+    padding-top:10px;
     position:relative;
 }
 .third-section .title {
     border-bottom: 1px solid #A1AAB7;
-    color: #1abafe;
+    color: #87b8cd;
 }
 .sub-section {
-    margin-top:30px;
+    margin-top:20px;
 }
 .sub-section .title {
     padding:0;
 }
 /*******
-3.1 Services  
+3.1 Marcas de empresas
 ***************************************/
 .service{
-    margin-top:20px;
+    margin-top:1px;
 }
  .service, .service h2 {
-    padding-top:15px;
+    padding-top:30px;
 }
 .service p {
-    padding:0px 50px;
+    padding:10px 30px;
     height:60px;
 }
 .service img {
-    width:200px;
-    height:200px;
+    width:170px;
+    height:170px;
 }
 /*
 3.2 Cobertura y Obras
@@ -478,7 +484,7 @@ p {
 .project-title {
     margin-top:15px;
     margin-bottom:15px;
-    border-bottom:1px solid #1abafe;
+    border-bottom:1px solid #dae3e3;
 }
 .project-title h3 {
     float:left;
@@ -487,11 +493,11 @@ p {
     width:80%;
 }
 .project-title .close {
-    color: #1ab6fe;
+    color: hwb(193 94% 1%);
     margin-top:10px;
 }
 .project-info span, .project-title h3 {
-    color:#1ab6fe;
+    color:#0f7cae;
 }
 .project-info {
     font-weight:100;
@@ -517,6 +523,9 @@ p {
 /*
 3.3 Quienes somos
 ******************************************************************/
+.thumbnail h2{
+    color: #94bfd2;
+}
  .team .thumbnail {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -531,13 +540,13 @@ p {
     color:#fff;
 }
 .team .thumbnail .mask {
-    background: #0b7dc3;
+    background: #576d7b;
 }
 .team .thumbnail .mask h2 {
-    margin-top:20%;
+    margin-top:15%;
 }
-.team .thumbnail .mask, .team .thumbnail .mask h3, .team .thumbnail .mask p, .team .thumbnail:hover h3, .team .thumbnail:hover .social a:hover {
-    color:#035b7e;
+.team .thumbnail .mask, .team .thumbnail .mask h2, .team .thumbnail .mask p, .team .thumbnail:hover h2, .team .thumbnail:hover .social a:hover {
+    color:#d3dde7;
 }
 .about-text {
     margin-top:30px;
@@ -546,36 +555,9 @@ p {
     padding:0;
     font-size:16px;
 }
-/*********************************************************************
-                        SKILLS BAR
-*********************************************************************/
- .skills {
-    list-style-type: none;
-    position: relative;
-    margin:0px;
-}
-.skills li {
-    margin-bottom:30px;
-    background:#FFF;
-    height:40px;
-    padding:1px;
-}
-.skills li h3 {
-    position: relative;
-    font-size: 15px;
-    padding:0;
-    margin:0;
-    left: 10px;
-    z-index: 1;
-    color: #080909;
-}
-.skills li .bar {
-    height:40px;
-    position:absolute;
-    background-color: #1a84fe;
-}
+
 /*
-3.4 Clients
+3.4 Seccion de Marcas
 **********************************************************************/
  .client-slider img {
     border:1px solid white;
@@ -664,7 +646,7 @@ p {
     background-color:#181A1C;
     text-transform:uppercase;
     text-align: center;
-    color:#1a94fe;
+    color:#84b6e3;
     padding:40px 0px;
     font-size: 36px;
     margin-top:0px;
@@ -678,7 +660,7 @@ p {
 }
 .price-column .list li{
     font-weight:lighter;
-    color:#747C89;
+    color:#626975;
     font-size:20px;
     border-bottom:1px solid #747C89;
     padding:25px 0px;
@@ -727,7 +709,7 @@ p {
 3.7 Contact
 ********************************************************************/
  .contact {
-    background: #FECE1A;
+    background: #00aeff;
 }
 .contact h1, .contact h2, .contact h3, .contact h4, .contact h5, .contact h6, .contact .section .title > p, .contact .social > li > a {
     color: #181A1C;
@@ -737,9 +719,9 @@ p {
     line-height: 20px;
     height: auto;
 }
-.contact textarea {
+/* .contact textarea {
     height: 120px;
-}
+} */
 .contacts, .contact .social {
     color: #fff;
     list-style: none;
@@ -762,20 +744,13 @@ p {
     margin:10px auto;
     font-size:30px;
 }
-.map-wrapper {
+.map-wrapper{
     position:relative;
-    height:500px;
+    text-align: center;
 }
-.map-canvas {
-    position:absolute;
-    margin-bottom:20px;
-    width:100%;
-    height:500px;
-    color: #29383F;
-    position:absolute;
-    left:0;
-    top:0;
-    right:0;
+iframe{
+    width:1100px;
+    height:300px; 
 }
 .contact .social {
     display: inline-block;
@@ -815,7 +790,7 @@ p {
     font-size:17px;
 }
 .message-btn:hover {
-    background-color:#FECE1A;
+    background-color:#00aeff;
 }
 .contact-info {
     text-align:center;
@@ -835,7 +810,7 @@ p {
 3.8 Footer
 ********************************************************************/
  .footer {
-    background: #181A1C;
+    background: #2f3236;
     text-align: center;
 }
 .footer > p {
@@ -844,7 +819,7 @@ p {
 }
 
 .footer a{
-    color:#343126;
+    color:#539f92;
 }
 
 .footer a:hover, .footer a:focus{
@@ -881,8 +856,9 @@ p {
         border-radius:40px;
         line-height: 80px;
     }
+
 }
-@media (max-width: 979px) {
+@media (max-width: 980px) {
     body {
         padding-left:0;
         padding-right:0;
@@ -890,10 +866,15 @@ p {
     .navbar-fixed-top, .navbar-fixed-bottom {
         position: fixed;
     }
-    .navbar .nav > li > a {
+    .navbar .nav > li > a >{
         line-height: 20px;
         vertical-align: middle;
         text-align: center;
+    }
+   
+    .section .secondary-section{
+        position: absolute;
+        width:90px;
     }
     .section {
         padding-left:20px;
@@ -930,8 +911,13 @@ p {
     .newsletter form {
         text-align:center;
     }
+    iframe{
+        width:600px;
+        height:300px; 
+    }
 }
 @media (max-width: 767px) {
+    
     .info-mail {
         width:90%;
         padding:15px 0px;
@@ -941,5 +927,9 @@ p {
     }
     .price-column, .testimonial {
         margin-top:30px;
+    }
+    iframe{
+        width:300px;
+        height:200px; 
     }
 }
